<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/text_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/main_my_nanodegree_apps"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <Button
        android:id="@+id/button_main_0"
        style="@style/ButtonMain"
        android:layout_below="@id/text_main"
        android:onClick="onClickButton0"
        android:text="@string/main_popular_movies" />

    <Button
        android:id="@+id/button_main_1"
        style="@style/ButtonMain"
        android:layout_below="@id/button_main_0"
        android:onClick="onClickButton1"
        android:text="@string/main_stock_hawk" />

    <Button
        android:id="@+id/button_main_2"
        style="@style/ButtonMain"
        android:layout_below="@id/button_main_1"
        android:onClick="onClickButton2"
        android:text="@string/main_build_it_bigger" />

    <Button
        android:id="@+id/button_main_3"
        style="@style/ButtonMain"
        android:layout_below="@id/button_main_2"
        android:onClick="onClickButton3"
        android:text="@string/main_make_your_app_material" />

    <Button
        android:id="@+id/button_main_4"
        style="@style/ButtonMain"
        android:layout_below="@id/button_main_3"
        android:onClick="onClickButton4"
        android:text="@string/main_go_ubiquitous" />

    <Button
        android:id="@+id/button_main_5"
        style="@style/ButtonMain"
        android:layout_below="@id/button_main_4"
        android:onClick="onClickButton5"
        android:text="@string/main_capstone" />

</RelativeLayout>
